2020-11-23  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/tools/javadoc/AbstractTaglet.java:
	Interim check-in: Calculate Javadoc hrefs for documented classes.

2020-08-20  Allen D. Ball  <ball@hcf.dev>

	* Initial migration from ball-javadoc-taglets-jdk8.
